fix: changed frontend nav overflow to auto (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -6209,7 +6209,7 @@ i.i--left.i--lock, i.i--left.i--trash {x
     min-height: 100%;
     top: 0;
     height:100%;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .nav-bar {
